// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[[ ConfigureSSO ]] renders correctly with all props 1`] = `
"<zmodal-stub title=\\"Configure SSO Identity Provider\\">
  <div class=\\"space-y-5 px-4 py-3\\"><label class=\\"block space-y-2\\">
      <div class=\\"text-xs leading-5\\">Domain name</div>
      <zinput-stub read-only=\\"true\\" value=\\"https://deepsource.io\\" placeholder=\\"\\" size=\\"small\\"></zinput-stub>
    </label>
    <div class=\\"space-y-2\\"><label class=\\"space-y-2\\">
        <div class=\\"text-xs leading-5\\">XML Metadata URL</div>
        <zinput-stub size=\\"small\\" placeholder=\\"\\" value=\\"\\"></zinput-stub>
      </label>
      <!---->
    </div>
  </div>
</zmodal-stub>"
`;

exports[`[[ ConfigureSSO ]] renders correctly without all props 1`] = `
"<zmodal-stub title=\\"Configure SSO Identity Provider\\">
  <div class=\\"space-y-5 px-4 py-3\\"><label class=\\"block space-y-2\\">
      <div class=\\"text-xs leading-5\\">Domain name</div>
      <zinput-stub read-only=\\"true\\" value=\\"\\" placeholder=\\"\\" size=\\"small\\"></zinput-stub>
    </label>
    <div class=\\"space-y-2\\"><label class=\\"space-y-2\\">
        <div class=\\"text-xs leading-5\\">XML Metadata URL</div>
        <zinput-stub size=\\"small\\" placeholder=\\"\\" value=\\"\\"></zinput-stub>
      </label>
      <!---->
    </div>
  </div>
</zmodal-stub>"
`;
